Program was not compiling. An attempt to find and fix the bug causing this was made on 22/11/2020s
Two projects were merged. Necessary code could not be accessed. This contributed to unfunctional code.s

I removed unsued event handlers and methods#

Sql connection was made every time an action was performed. This made the program significantly slow.

Application was still running in the background after closing

Added data to the Users table in the database but the username field  did not exist causing the program to crash internally.

Added the username column to the table

--- a/Happy_Tech_UI/App.config
+++ b/Happy_Tech_UI/App.config
@@ -1,6 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Happy_Tech_UI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+<userSettings>
+        <Happy_Tech_UI.Properties.Settings>
+                <setting name="ConnectionString" serializeAs="String">
+                        <value>Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename="C:\Users\Ahmed\Desktop\HappyTech-Assignment--main\Happy Tech Gui Main\Happy Tech Gui Main\Happy_Tech_UI\HappyTech_Database.mdf";Integrated Security=True
+
+</value>
+                </setting>
+        </Happy_Tech_UI.Properties.Settings>
+    </userSettings>
 </configuration>
