--- a/Happy_Tech_UI/Properties/Settings.settings
+++ b/Happy_Tech_UI/Properties/Settings.settings
@@ -1,7 +1,11 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Happy_Tech_UI.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="ConnectionString" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename="C:\Users\Ahmed\Desktop\HappyTech-Assignment--main\Happy Tech Gui Main\Happy Tech Gui Main\Happy_Tech_UI\HappyTech_Database.mdf";Integrated Security=True
+
+</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
